argo_cd_yaml_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx-deployment
spec:
  replicas: 8
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
  syncPolicy:
    automated:
      prune: true
      allowEmpty: true
      selfHeal: true
    spec:
        containers:
        - image: nginx
          name: nginx
