argo_cd_yaml_files/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: nginx
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    blueGreen:
      activeService: nginx-service
      previewService: nginx-service-preview
  template:
    metadata:
      labels:
        app: nginx
    spec:
        containers:
        - image: nginx
          name: nginx
