argo_cd_yaml_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
  
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-service-preview
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
  - port: 443
    name: https
    protocol: TCP
  selector:
    app: nginx
  type: LoadBalancer
  externalIPs:
  - 192.168.0.10
