argo_cd_yaml_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
spec:
  rules:
  - host: argocd.example.com
    http:
      paths:
       - pathType: Prefix
          path: "/"
          backend:
            service:
            serviceName: nginx-service
            port:
              number: 80
